test/Common/LinkerScriptParsing/Errors/Sections/IncludeErrorInMainScript/Inputs/include.t
INCLUDE newinclude.t
lib12.a:11.o (.text.*main)
